--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <!-- Musik -->
   <audio id="bg-music" loop>
-    <source src="assets/aboutyou.mp3" type="audio/mp3">
+    <source src="assets/musik.mp3" type="audio/mp3">
   </audio>
 
   <script src="script.js"></script>
