--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
     <p id="lightbox-caption"></p>
   </div>
 
-  <!-- Musik -->
-  <audio id="bg-music" loop>
-    <source src="assets/musik.mp3" type="audio/mp3">
-  </audio>
+ <!-- Musik -->
+<audio id="bg-music" autoplay loop>
+  <source src="assets/musik.mp3" type="audio/mp3">
+</audio>
+
 
   <script src="script.js"></script>
 </body>
