--- a/index.html
+++ b/index.html
@@ -57,10 +57,26 @@
     <p id="lightbox-caption"></p>
   </div>
 
- <!-- Musik -->
-<audio id="bg-music" autoplay loop>
+<!-- Musik -->
+<audio id="bg-music" loop>
   <source src="assets/musik.mp3" type="audio/mp3">
 </audio>
+
+<script>
+  function startMusic() {
+    const music = document.getElementById('bg-music');
+    music.play().catch(err => {
+      console.log("Autoplay diblokir, user harus klik tombol dulu");
+    });
+  }
+
+  // contoh: panggil fungsi ini di tombol Next layer 1
+  function nextLayer() {
+    document.getElementById('layer1').classList.add('hidden');
+    document.getElementById('layer2').classList.remove('hidden');
+    startMusic(); // Musik mulai pas klik Next
+  }
+</script>
 
 
   <script src="script.js"></script>
