--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
   </div>
 
 <!-- Musik -->
-<audio id="bg-music" loop>
-  <source src="assets/musik.mp3" type="audio/mp3">
-</audio>
+<audio id="bg-music" src="asset/musik.mp3" autoplay loop></audio>
+
 
 <script>
   function startMusic() {
