--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <source src="assets/video1.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
-    <h2>Countdown Menuju 11 Oktober 2025</h2>
+    <h2>Umur Acmelia Okta Ramadhani</h2>
     <p id="countdown"></p>
     <p id="umur"></p>
     <button onclick="prevLayer()">⬅ Back</button>
@@ -33,7 +33,7 @@
     </video>
     <div class="overlay"></div>
     <h2 class="glow-text">Teks Cinematic Slide Kedua</h2>
-    <p>Ganti teks ini sesuai kebutuhan lu</p>
+    <p>Amell happy birthday</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
   </div>
