--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Splash Screen -->
   <div id="splash" class="layer active">
     <h1 class="glow-text">Amelllllll, I promise this will be your first experience</h1>
-    <<button onclick="startExperience()">Tap to Start</button>
+    <button id="startBtn" onclick="startExperience()">Tap to Start</button>
   </div>
 
   <!-- Layer 1 Countdown -->
