--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amell Birthday Web</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Basic CSS untuk demo */
+    body, html { margin: 0; padding: 0; font-family: sans-serif; overflow-x: hidden; }
+    .layer { display: none; position: relative; width: 100%; height: 100vh; text-align: center; color: white; }
+    .layer.active { display: block; }
+    .bg-video { position: absolute; top:0; left:0; width: 100%; height: 100%; object-fit: cover; z-index: -1; }
+    .overlay { position: absolute; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.5); z-index: 0; }
+    .gallery img { width: 150px; margin: 5px; cursor: pointer; }
+    .lightbox { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.8); display: flex; justify-content: center; align-items: center; flex-direction: column; color: white; }
+    .lightbox img { max-width: 80%; max-height: 80%; margin-bottom: 10px; }
+  </style>
 </head>
 <body>
+
   <!-- Splash Screen -->
   <div id="splash" class="layer active">
     <h1 class="glow-text">Amelllllll, I promise this will be your first experience</h1>
-    <button id="startBtn" onclick="startExperience()">Tap to Start</button>
+    <button id="startBtn">Tap to Start</button>
   </div>
 
   <!-- Layer 1 Countdown -->
-  <div id="layer1" class="layer hidden">
+  <div id="layer1" class="layer">
     <video autoplay muted loop class="bg-video">
       <source src="assets/video1.mp4" type="video/mp4">
     </video>
@@ -27,7 +39,7 @@
   </div>
 
   <!-- Layer 2 Teks -->
-  <div id="layer2" class="layer hidden">
+  <div id="layer2" class="layer">
     <video autoplay muted loop class="bg-video">
       <source src="assets/video2.mp4" type="video/mp4">
     </video>
@@ -39,7 +51,7 @@
   </div>
 
   <!-- Layer 3 Galeri Foto -->
-  <div id="layer3" class="layer hidden">
+  <div id="layer3" class="layer">
     <h2>Galeri Kenangan</h2>
     <div class="gallery">
       <img src="assets/foto1.jpg" alt="Foto 1" onclick="openLightbox(this)">
@@ -52,10 +64,15 @@
   </div>
 
   <!-- Lightbox -->
-  <div id="lightbox" class="lightbox hidden" onclick="closeLightbox()">
+  <div id="lightbox" class="lightbox" style="display:none;" onclick="closeLightbox()">
     <img id="lightbox-img" src="">
     <p id="lightbox-caption"></p>
   </div>
 
-<!-- Musik -->
-<audio id="bg-music" src="asset/musik.mp3" autoplay loop></audio>
+  <!-- Musik -->
+  <audio id="bg-music" src="asset/musik.mp3" loop></audio>
+
+  <!-- JS -->
+  <script src="script.js"></script>
+</body>
+</html>
