--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Splash Screen -->
   <div id="splash" class="layer active">
-    <h1 class="glow-text">Amelllllll, I promise this will be your first experience</h1>
+    <h1 class="glow-text">Amelllll,this will be your first experience</h1>
     <button id="startBtn">Tap to Start</button>
   </div>
 
@@ -33,7 +33,7 @@
       <source src="assets/video2.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
-    <h2 class="glow-text">Teks Cinematic Slide Kedua</h2>
+    <h2 class="glow-text">HAPPY BIRTHDAY ACMELIA</h2>
     <p>Amell happy birthday</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
@@ -41,7 +41,7 @@
 
   <!-- Layer 3 Galeri Foto -->
   <div id="layer3" class="layer">
-    <h2>Galeri Kenangan</h2>
+    <h2>ABOUT YOU</h2>
     <div class="gallery">
       <img src="assets/foto1.jpg" alt="Foto 1" onclick="openLightbox(this)">
       <img src="assets/foto2.jpg" alt="Foto 2" onclick="openLightbox(this)">
