--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Splash Screen -->
   <div id="splash" class="layer active">
     <h1 class="glow-text">Amelllll,this will be your first experience</h1>
-    <button id="startBtn">Tap to Start</button>
+    <button id="startBtn">GASKEUNN</button>
   </div>
 
   <!-- Layer 1 Countdown -->
