--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Layer 1 Countdown -->
   <div id="layer1" class="layer">
     <video autoplay muted loop class="bg-video">
-      <source src="assets/video1.mp4" type="video/mp4">
+      <source src="asset/video1.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <h2>Umur Acmelia Okta Ramadhani</h2>
@@ -30,11 +30,11 @@
   <!-- Layer 2 Teks -->
   <div id="layer2" class="layer">
     <video autoplay muted loop class="bg-video">
-      <source src="assets/video2.mp4" type="video/mp4">
+      <source src="asset/video2.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <h2 class="glow-text">HAPPY BIRTHDAY ACMELIA</h2>
-    <p>Amell happy birthday</p>
+    <p>Sorry gw cuman bisa bikin yang kayak gini</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
   </div>
@@ -43,11 +43,10 @@
   <div id="layer3" class="layer">
     <h2>ABOUT YOU</h2>
     <div class="gallery">
-      <img src="assets/foto1.jpg" alt="Foto 1" onclick="openLightbox(this)">
-      <img src="assets/foto2.jpg" alt="Foto 2" onclick="openLightbox(this)">
-      <img src="assets/foto3.jpg" alt="Foto 3" onclick="openLightbox(this)">
-      <img src="assets/foto4.jpg" alt="Foto 4" onclick="openLightbox(this)">
-      <img src="assets/foto5.jpg" alt="Foto 5" onclick="openLightbox(this)">
+      <img src="asset/foto1.jpg" alt="Foto 1" onclick="openLightbox(this)">
+      <img src="asset/foto2.jpg" alt="Foto 2" onclick="openLightbox(this)">
+      <img src="asset/foto3.jpg" alt="Foto 3" onclick="openLightbox(this)">
+      <img src="asset/foto4.jpg" alt="Foto 4" onclick="openLightbox(this)">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
   </div>
