--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <!-- Splash Screen -->
   <div id="splash" class="layer active">
+    <video autoplay muted loop class="bg-video">
+      <source src="asset/splash.mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
     <h1 class="glow-text">Amelllll,this will be your first experience</h1>
     <button id="startBtn">GASKEUNN</button>
   </div>
@@ -41,20 +45,27 @@
 
   <!-- Layer 3 Galeri Foto -->
   <div id="layer3" class="layer">
+    <video autoplay muted loop class="bg-video">
+      <source src="asset/video3.mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
+
     <h2>ABOUT YOU</h2>
     <div class="gallery">
-      <img src="asset/foto1.jpg" alt="Foto 1" onclick="openLightbox(this)">
-      <img src="asset/foto2.jpg" alt="Foto 2" onclick="openLightbox(this)">
-      <img src="asset/foto3.jpg" alt="Foto 3" onclick="openLightbox(this)">
-      <img src="asset/foto4.jpg" alt="Foto 4" onclick="openLightbox(this)">
+      <img src="asset/foto1.jpg" alt="Foto 1" onclick="openLightbox(this, 'Caption foto pertama')">
+      <img src="asset/foto2.jpg" alt="Foto 2" onclick="openLightbox(this, 'Caption foto kedua')">
+      <img src="asset/foto3.jpg" alt="Foto 3" onclick="openLightbox(this, 'Caption foto ketiga')">
+      <img src="asset/foto4.jpg" alt="Foto 4" onclick="openLightbox(this, 'Caption foto keempat')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
   </div>
 
   <!-- Lightbox -->
   <div id="lightbox" class="lightbox" style="display:none;" onclick="closeLightbox()">
-    <img id="lightbox-img" src="">
-    <p id="lightbox-caption"></p>
+    <div class="lightbox-content">
+      <img id="lightbox-img" src="">
+      <p id="lightbox-caption"></p>
+    </div>
   </div>
 
   <!-- Musik -->
