--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Layer 1 Countdown -->
   <div id="layer1" class="layer">
     <video autoplay muted loop class="bg-video">
-      <source src="asset/video1.mp4" type="video/mp4">
+      <source src="asset/video2.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <h2>Umur Acmelia Okta Ramadhani</h2>
@@ -34,11 +34,11 @@
   <!-- Layer 2 Teks -->
   <div id="layer2" class="layer">
     <video autoplay muted loop class="bg-video">
-      <source src="asset/video2.mp4" type="video/mp4">
+      <source src="asset/video1.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <h2 class="glow-text">HAPPY BIRTHDAY ACMELIA</h2>
-    <p>Sorry gw cuman bisa bikin yang kayak gini</p>
+    <p>Tunggu dulu lagi loading, jangan next slide dulu!</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
   </div>
