--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
     <h2>ABOUT YOU</h2>
     <div class="gallery">
-      <img src="asset/foto1.jpg" alt="Foto 1" onclick="openLightbox(this, 'Caption foto pertama')">
-      <img src="asset/foto2.jpg" alt="Foto 2" onclick="openLightbox(this, 'Caption foto kedua')">
-      <img src="asset/foto3.jpg" alt="Foto 3" onclick="openLightbox(this, 'Caption foto ketiga')">
-      <img src="asset/foto4.jpg" alt="Foto 4" onclick="openLightbox(this, 'Caption foto keempat')">
+      <img src="asset/foto1.jpeg" alt="Foto 1" onclick="openLightbox(this, 'Always be yourself! Dont change your happiness just because of other people.')">
+      <img src="asset/foto2.jpeg" alt="Foto 2" onclick="openLightbox(this, 'And last, web ini bakalan ABADI, dan ada penghitung real time di slide 2 dan akan bertambah terus sesuai umur amel!')">
+      <img src="asset/foto3.jpeg" alt="Foto 3" onclick="openLightbox(this, 'Semoga amel always dapetin semuanya, dapet pendidikan, dapet rezeki, dapet temen baik, dapet cowok baik, dapet kesehatan baik, dapet mood baik, dapet everything!')">
+      <img src="asset/foto4.jpeg" alt="Foto 4" onclick="openLightbox(this, 'Inget! Terus improve and terus evaluasi, because you have an extraordinary potential!')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
   </div>
