--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     </video>
     <div class="overlay"></div>
     <h2>Umur Acmelia Okta Ramadhani</h2>
+    <!-- Umur realtime -->
     <p id="umur"></p>
     <h3>Menuju Ulang Tahun Berikutnya</h3>
+    <!-- Countdown ke ulang tahun -->
     <p id="countdown"></p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
@@ -53,10 +55,10 @@
 
     <h2>ABOUT YOU</h2>
     <div class="gallery">
-      <img src="asset/foto1.jpeg" alt="Foto 1" onclick="openLightbox(this, 'Always be yourself! Dont change your happiness just because of other people.')">
-      <img src="asset/foto2.jpeg" alt="Foto 2" onclick="openLightbox(this, 'And last, web ini bakalan ABADI, dan ada penghitung real time di slide 2 dan akan bertambah terus sesuai umur amel!')">
-      <img src="asset/foto3.jpeg" alt="Foto 3" onclick="openLightbox(this, 'Semoga amel always dapetin semuanya, dapet pendidikan, dapet rezeki, dapet temen baik, dapet cowok baik, dapet kesehatan baik, dapet mood baik, dapet everything!')">
-      <img src="asset/foto4.jpeg" alt="Foto 4" onclick="openLightbox(this, 'Inget! Terus improve and terus evaluasi, because you have an extraordinary potential!')">
+      <img src="asset/foto1.jpg" alt="Foto 1" onclick="openLightbox(this, 'Caption foto pertama')">
+      <img src="asset/foto2.jpg" alt="Foto 2" onclick="openLightbox(this, 'Caption foto kedua')">
+      <img src="asset/foto3.jpg" alt="Foto 3" onclick="openLightbox(this, 'Caption foto ketiga')">
+      <img src="asset/foto4.jpg" alt="Foto 4" onclick="openLightbox(this, 'Caption foto keempat')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
   </div>
@@ -126,6 +128,7 @@
     updateUmur();
     updateCountdown();
   </script>
+
   <script src="script.js"></script>
 </body>
 </html>
