--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <source src="asset/splash.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
-    <h1 class="glow-text">Amelllll,this will be your first experience</h1>
+    <h1 class="glow-text">gak bakalan ada yang ngucapin kayak gini except AING</h1>
     <button id="startBtn">GASKEUNN</button>
   </div>
 
@@ -24,7 +24,7 @@
       <source src="asset/video2.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
-    <h2>Umur Acmelia Okta Ramadhani</h2>
+    <h2>Umur Acmelia Okta Ramadani</h2>
     <p id="umur"></p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
@@ -37,7 +37,7 @@
     </video>
     <div class="overlay"></div>
     <h2 class="glow-text">HAPPY BIRTHDAY ACMELIA</h2>
-    <p>Tunggu dulu lagi loading, jangan next slide dulu!</p>
+    <p>lagi loading, jangan next slide dulu!</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
   </div>
@@ -52,7 +52,7 @@
     <h2>ABOUT YOU</h2>
     <div class="gallery">
       <img src="asset/foto1.jpeg" alt="Foto 1" onclick="openLightbox(this, 'Always be yourself! Dont change your happiness just because of other people')">
-      <img src="asset/foto2.jpeg" alt="Foto 2" onclick="openLightbox(this, 'And last, web ini bakalan ABADI, ada penghitung real time di slide 2 dan akan bertambah terus sesuai umur amel!')">
+      <img src="asset/foto2.jpeg" alt="Foto 2" onclick="openLightbox(this, 'Web ini bakalan ABADI, ada penghitung real time di slide 2 dan akan bertambah terus sesuai umur amel!')">
       <img src="asset/foto3.jpeg" alt="Foto 3" onclick="openLightbox(this, 'Semoga amel always dapetin semuanya, dapet pendidikan, dapet rezeki, dapet temen baik, dapet cowok baik, dapet kesehatan baik, dapet mood baik, dapet everything!')">
       <img src="asset/foto4.jpeg" alt="Foto 4" onclick="openLightbox(this, 'Inget! Terus improve and terus evaluasi, because you have an extraordinary potential!')">
     </div>
