--- a/index.html
+++ b/index.html
@@ -57,6 +57,36 @@
       <img src="asset/foto4.jpeg" alt="Foto 4" onclick="openLightbox(this, 'Inget! Terus improve and terus evaluasi, because you have an extraordinary potential!')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
+    <button onclick="nextLayer()">Next ➡</button>
+  </div>
+
+  <!-- Layer 4 Kosong -->
+  <div id="layer4" class="layer">
+    <video autoplay muted loop class="bg-video">
+      <source src="asset/video4.mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
+    <h2></h2>
+    <p></p>
+    <button onclick="prevLayer()">⬅ Back</button>
+    <button onclick="nextLayer()">Next ➡</button>
+  </div>
+
+  <!-- Layer 5 Galeri Foto (copy dari Layer 3) -->
+  <div id="layer5" class="layer">
+    <video autoplay muted loop class="bg-video">
+      <source src="asset/video5.mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
+
+    <h2>MORE MEMORIES</h2>
+    <div class="gallery">
+      <img src="asset/foto5.jpeg" alt="Foto 5" onclick="openLightbox(this, 'Kenangan manis yang selalu disimpen!')">
+      <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'Semoga makin banyak moment seru!')">
+      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Jangan lupa buat terus bahagia!')">
+      <img src="asset/foto8.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Selalu jadi diri sendiri, itu yang terbaik!')">
+    </div>
+    <button onclick="prevLayer()">⬅ Back</button>
   </div>
 
   <!-- Lightbox -->
