--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     </video>
     <div class="overlay"></div>
 
-    <h2>MORE MEMORIES</h2>
+    <h2>POEMS ABOUT YOU</h2>
     <div class="gallery">
-      <img src="asset/foto5.jpeg" alt="Foto 5" onclick="openLightbox(this, 'Kenangan manis yang selalu disimpen!')">
-      <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'Semoga makin banyak moment seru!')">
+      <img src="asset/foto5.jpeg" alt="Foto 5" onclick="openLightbox(this, 'Gua bikin ini setelah kita masak bareng')">
+      <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'Gua gak pernah naksir, bogoh, ataupun mau sama lu, ini cuman pujian gua tentang lu')">
       <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Jangan lupa buat terus bahagia!')">
       <img src="asset/foto8.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Selalu jadi diri sendiri, itu yang terbaik!')">
     </div>
