--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <div class="gallery">
       <img src="asset/foto5.jpeg" alt="Foto 5" onclick="openLightbox(this, 'Gua bikin ini setelah kita masak bareng')">
       <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'Gua gak pernah naksir, bogoh, ataupun mau sama lu, ini cuman pujian gua tentang lu')">
-      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Jangan lupa buat terus bahagia!')">
-      <img src="asset/foto8.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Selalu jadi diri sendiri, itu yang terbaik!')">
+      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Ini sebelum gua ke bandung, keduanya bukan buat lu, but gua bikinnya sambil ngebayangin ngeliat lu')">
+      <img src="asset/foto8.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Emang semuanya gua bikin sambil ngebayangin lu, tapi jangan salah paham dan mikir hal lain yaa')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
   </div>
