--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       for (let i = 0; i < 20; i++) {
         setTimeout(() => {
           let img = document.createElement("img");
-          img.src = "asset/hujan.png"; // ganti sesuai file PNG lu
+          img.src = "asset/hujan.jpeg"; // ganti sesuai file PNG lu
           img.classList.add("rain-img");
 
           img.style.left = Math.random() * window.innerWidth + "px";
