--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     </video>
     <div class="overlay"></div>
 
-    <h2>FINAL SURPRISE</h2>
-    <p>Klik tombol di bawah buat liat efek hujan 🎉</p>
+    <h2 class="glow-text">GIMANA RASANYA DIUCAPIN KAYA GINI SAMA COWO SEPINTER DAN SEKEREN GWEH😎</h2>
+    <p>Klik tombol idiot yaa</p>
 
     <button onclick="prevLayer()">⬅ Back</button>
-    <button onclick="startRain()">🌧 Start Rain</button>
+    <button onclick="startRain()">IDIOT</button>
   </div>
 
   <!-- Lightbox -->
