--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <h2></h2>
     <p></p>
     <button onclick="prevLayer()">⬅ Back</button>
-    <button onclick="nextLayer()">Next ➡</button>
+    <button onclick="nextLayer()">PRETT</button>
   </div>
 
   <!-- Layer 5 Galeri Foto -->
@@ -102,8 +102,8 @@
     <div class="gallery">
       <img src="asset/foto5.jpeg" alt="Foto 5" onclick="openLightbox(this, 'Gua bikin ini setelah kita masak bareng')">
       <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'Gua gak pernah naksir, bogoh, ataupun mau sama lu, ini cuman pujian gua tentang lu')">
-      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Ini sebelum gua ke bandung, keduanya bukan tentang lu tapi cuman halu, but tbh gua bikinnya sambil ngebayangin ngeliat lu hehe maap')">
-      <img src="asset/foto88.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Emang untuk 2 puisi ini gua bikin sambil ngebayangin lu, tapi jangan salah paham dan mikir hal lain yaa')">
+      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, ''Emang untuk 2 puisi ini gua bikin cuman halu, tapi pas dibaca malah cocok buat amel, jangan salah paham yaa!')">
+      <img src="asset/foto88.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Ini sebelum gua ke bandung, keduanya bukan tentang lu tapi cuman halu, but tbh pas baca malah kebayang maneh,hehe maap gak maksud apapun')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
@@ -116,8 +116,8 @@
     </video>
     <div class="overlay"></div>
 
-    <h2 class="glow-text">GIMANA RASANYA DIUCAPIN KAYA GINI SAMA COWO SEPINTER DAN SEKEREN GWEH😎</h2>
-    <p>Klik tombol idiot yaa</p>
+    <h2 class="glow-text">GIMANA RASANYA DIUCAPIN ULTAH KAYA GINI SAMA COWO SEPINTER DAN SEKEREN GWEH😎</h2>
+    <p>btw backgroundny ucapan dari berbagai bahasa<p>
 
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="startRain()">IDIOT</button>
