--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="overlay"></div>
 
     <h2 class="glow-text">GIMANA RASANYA DIUCAPIN ULTAH KAYA GINI SAMA COWO SEPINTER DAN SEKEREN GWEH😎</h2>
-    <p>btw backgroundny ucapan dari berbagai bahasa<p>
+    <p>btw backgroundny ucapan dari berbagai bahasa</p>
 
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="startRain()">IDIOT</button>
