--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="gallery">
       <img src="asset/foto5.jpeg" alt="Foto 5" onclick="openLightbox(this, 'Gua bikin ini setelah kita masak bareng')">
       <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'Gua gak pernah naksir, bogoh, ataupun mau sama lu, ini cuman pujian gua tentang lu')">
-      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Emang untuk 2 puisi ini gua bikin cuman halu, tapi pas dibaca malah cocok buat amel, jangan salah paham yaa!')">
+      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Emang untuk 2 puisi ini gua bikin cuman halu tapi pas dibaca malah cocok buat amel, jangan salah paham!')">
       <img src="asset/foto88.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Ini sebelum gua ke bandung, keduanya bukan tentang lu tapi cuman halu, but tbh pas baca malah kebayang maneh,hehe maap gak maksud apapun')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
