--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
 
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="startRain()">IDIOT</button>
+    <button onclick="nextLayer()">Next ➡</button>
+  </div>
+
+  <!-- Layer 7 Randomize Kata-kata -->
+  <div id="layer7" class="layer">
+    <video autoplay muted loop class="bg-video">
+      <source src="asset/video7.mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
+
+    <h2 class="glow-text">BACOTAN GK BERFAEDAH💫</h2>
+    <p id="random-text">Klik tombol di bawah buat dapetin kata random</p>
+    <button onclick="prevLayer()">⬅ Back</button>
+    <button onclick="showRandomText()">🎲 Randomize</button>
   </div>
 
   <!-- Lightbox -->
