--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <h2 class="glow-text">BACOTAN GK BERFAEDAH💫</h2>
     <p id="random-text">Klik tombol di bawah buat dapetin kata random</p>
     <button onclick="prevLayer()">⬅ Back</button>
-    <button onclick="showRandomText()">🎲 Randomize</button>
+    <button onclick="randomQuote()">🎲 Randomize</button>
   </div>
 
   <!-- Lightbox -->
