--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="overlay"></div>
 
     <h2 class="glow-text">BACOTAN GK BERFAEDAH💫</h2>
-    <p id="random-text">Klik tombol di bawah buat dapetin kata random</p>
+    <p id="random-quote">Klik tombol di bawah buat dapetin kata random</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="randomQuote()">🎲 Randomize</button>
   </div>
