--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </video>
     <div class="overlay"></div>
     <h2 class="glow-text">HAPPY BIRTHDAY ACMELIA</h2>
-    <p>lagi loading, jangan next slide dulu!</p>
+    <p>Hari dimana bulan jadi punya saingan, eaaaa</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
   </div>
