--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     <div class="overlay"></div>
 
     <h2 class="glow-text">BACOTAN GK BERFAEDAH💫</h2>
-    <p id="random-quote">Klik tombol di bawah buat dapetin kata random</p>
+    <p id="random-quote">Klik tombol di bawah buat kata-kata hari ini</p>
     <button onclick="prevLayer()">⬅ Back</button>
-    <button onclick="randomQuote()">🎲 Randomize</button>
+    <button onclick="randomQuote()">🎲 NYOCOT</button>
   </div>
 
   <!-- Lightbox -->
