--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     <div class="gallery">
       <img src="asset/foto1.jpeg" alt="Foto 1" onclick="openLightbox(this, 'Always be yourself! Dont change your happiness just because of other people')">
       <img src="asset/foto2.jpeg" alt="Foto 2" onclick="openLightbox(this, 'Web ini bakalan ABADI, ada penghitung real time di slide 2 dan akan bertambah terus sesuai umur amel!')">
-      <img src="asset/foto3.jpeg" alt="Foto 3" onclick="openLightbox(this, 'Semoga amel always dapetin semuanya...')">
-      <img src="asset/foto4.jpeg" alt="Foto 4" onclick="openLightbox(this, 'Inget! Terus improve and terus evaluasi...')">
+      <img src="asset/foto3.jpeg" alt="Foto 3" onclick="openLightbox(this, 'Semoga amel always dapetin semuanya, dapet pendidikan, dapet rezeki, dapet temen baik, dapet cowok baik, dapet kesehatan baik, dapet mood baik, dapet everything yg baik!')">
+      <img src="asset/foto4.jpeg" alt="Foto 4" onclick="openLightbox(this, 'Inget! Terus improve and terus evaluasi, because you have an extraordinary potential! HAPUS SIFAT AVOIDANT LU')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
@@ -146,7 +146,7 @@
       <source src="asset/video4.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
-    <h2 class="glow-text">COBA NYOCOKIN KARTU DULU!</h2>
+    <h2 class="glow-text">ADA TANTANGAN DIKIT</h2>
     <div class="memory-game" id="memory-game">
       <!-- Cards (same as punya lu) -->
       <div class="memory-card" data-name="amel1">
@@ -195,9 +195,9 @@
     <h2>POEMS ABOUT YOU</h2>
     <div class="gallery">
       <img src="asset/foto5.jpeg" alt="Foto 5" onclick="openLightbox(this, 'nyoba nulis di binder')">
-      <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'Gua gak pernah naksir...')">
-      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Emang untuk 2 puisi ini...')">
-      <img src="asset/foto88.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Ini sebelum gua ke bandung...')">
+      <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'Gua gak pernah naksir,atau sejenisnya')">
+      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Emang untuk 2 puisi ini cocok buat Amel, tapi jangan salah paham')">
+      <img src="asset/foto88.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Ini sebelum gua ke bandung, pas nulis keduanya cuman halu, tapi pas baca malah mikir diri elo,  bukan maksud apa-apa ya🙏🏾')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
@@ -209,7 +209,7 @@
       <source src="asset/video6.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
-    <h2 class="glow-text">GIMANA RASANYA ...</h2>
+    <h2 class="glow-text">GIMANA RASANYA DIUCAPIN DAN DIBUATIN WEB, SAMA COWOK SEKEREN DAN SEPINTER AING😎🤙🏽</h2>
     <p>btw backgroundny ucapan dari berbagai bahasa</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="startRain()">IDIOT</button>
@@ -324,6 +324,8 @@ const quotes = [
   "Kamu tuh bukti kalau cantik dan sederhana bisa jalan bareng.",
   "Kamu punya semangat yang bisa jadi inspirasi orang lain.",
   "Jangan pernah takut gagal, karena kamu punya potensi lebih besar dari yang kamu kira.",
+"mama teacher papah engineer OR mama teacher papah lawyer? 🤪", 
+"fakultas boleh red flag tapi sifatku mah green flag",
   "Kamu berharga bukan karena orang lain bilang, tapi karena memang begitu adanya.",
   "Kamu punya otak cerdas dan hati hangat, kombinasi langka yang nggak semua orang punya.",
   "Kamu tuh kayak matahari kecil, selalu ada cahaya bahkan di hari mendung.",
