--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
     <p id="random-quote">Klik tombol di bawah buat kata-kata hari ini</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="randomQuote()">🎲 NYOCOT</button>
+    <button onclick="nextLayer()">Next ➡</button>
   </div>
 
   <div id="lightbox" class="lightbox hidden" onclick="closeLightbox()">
