--- a/index.html
+++ b/index.html
@@ -294,6 +294,20 @@
     <button onclick="nextLayer()">Next ➡</button>
   </div>
 
+<!-- Layer Question -->
+<div id="layerQuestion" class="layer">
+  <video autoplay muted loop class="bg-video">
+    <source src="asset/bgquestion.mp4" type="video/mp4">
+  </video>
+  <div class="overlay">
+    <h1 class="title">Kamu mau lanjut sama aku? 🥺</h1>
+    <div class="btn-container">
+      <button id="yesBtn">Yes ❤️</button>
+      <button id="noBtn">No 😢</button>
+    </div>
+  </div>
+</div>
+
   <div id="lightbox" class="lightbox hidden" onclick="closeLightbox()">
     <div class="lightbox-content">
       <img id="lightbox-img" src="">
