--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
     <div class="btn-container">
       <button id="yesBtn">Yes ❤️</button>
       <button id="noBtn">No 😢</button>
+      <button onclick="prevLayer()">⬅ Back</button>
     </div>
   </div>
 </div>
