--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </video>
     <div class="overlay"></div>
     <h1 class="glow-text">gak bakalan ada yang ngucapin kayak gini except AING</h1>
-    <button id="startBtn">GASKEUNN</button>
+    <button id="startBtn" onclick="startExperience()">GASKEUNN</button>
   </div>
 
   <div id="layer1" class="layer">
