--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
   <div id="splash" class="layer">
     <video autoplay muted loop class="bg-video">
-      <source src="asset/splash.mp4" type="video/mp4">
+      <source src="asset/splashR.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <h1 class="glow-text">gak bakalan ada yang ngucapin kayak gini except AING</h1>
@@ -225,7 +225,7 @@
 
   <div id="layer1" class="layer">
     <video autoplay muted loop class="bg-video">
-      <source src="asset/video2.mp4" type="video/mp4">
+      <source src="asset/video2R.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <h2>Umur Acmelia Okta Ramadani</h2>
@@ -247,7 +247,7 @@
 
   <div id="layer3" class="layer">
     <video autoplay muted loop class="bg-video">
-      <source src="asset/video3.mp4" type="video/mp4">
+      <source src="asset/video3R.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <h2>ABOUT YOU</h2>
@@ -323,7 +323,7 @@
 
   <div id="layer6" class="layer">
     <video autoplay muted loop class="bg-video">
-      <source src="asset/video6.mp4" type="video/mp4">
+      <source src="asset/video6R.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
     <h2 class="glow-text">GIMANA RASANYA DIUCAPIN DAN DIBUATIN WEB, SAMA COWOK SEKEREN DAN SEPINTER AING😎🤙🏽</h2>
