--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <source src="asset/splashR.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
-    <h1 class="glow-text">gak bakalan ada yang ngucapin kayak gini except AING</h1>
+    <h1 class="glow-text">AFTER ±3 WEEKS, SORRY IF IT'S NOT GOOD ENOUGH,IT'S FIRST TIME FOR ME TO MAKE SMTHING LIKE THIS, ENJOY!</h1>
     <button id="startBtn" onclick="startExperience()">GASKEUNN</button>
   </div>
 
