--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <source src="asset/splashR.mp4" type="video/mp4">
     </video>
     <div class="overlay"></div>
-    <h1 class="glow-text">AFTER ±3 WEEKS, SORRY IF IT'S NOT GOOD ENOUGH,IT'S FIRST TIME FOR ME TO MAKE SMTHING LIKE THIS, ENJOY!</h1>
+    <h1 class="glow-text">AFTER ±3 WEEKS OF WORKS, ENJOY!</h1>
     <button id="startBtn" onclick="startExperience()">GASKEUNN</button>
   </div>
 
@@ -254,8 +254,8 @@
     <div class="gallery">
       <img src="asset/foto1.jpeg" alt="Foto 1" onclick="openLightbox(this, 'Always be yourself! Dont change your happiness just because of other people')">
       <img src="asset/foto2.jpeg" alt="Foto 2" onclick="openLightbox(this, 'Web ini bakalan ABADI, ada penghitung real time di slide 2 dan akan bertambah terus sesuai umur amel!')">
-      <img src="asset/foto3.jpeg" alt="Foto 3" onclick="openLightbox(this, 'Semoga amel always dapetin semuanya, dapet pendidikan, dapet rezeki, dapet temen baik, dapet cowok baik, dapet kesehatan baik, dapet mood baik, dapet everything yg baik!')">
-      <img src="asset/foto4.jpeg" alt="Foto 4" onclick="openLightbox(this, 'Inget! Terus improve and terus evaluasi, because you have an extraordinary potential! HAPUS SIFAT AVOIDANT LU')">
+      <img src="asset/foto3.jpeg" alt="Foto 3" onclick="openLightbox(this, 'Semoga amel always dapetin semuanya, dapet pendidikan yg baik, dapet rezeki yg baik, dapet temen yg baik, dapet cowok yg baik, dapet kesehatan yg baik, dapet mood yg baik, dapet everything yg baik!')">
+      <img src="asset/foto4.jpeg" alt="Foto 4" onclick="openLightbox(this, 'Terus improve and terus evaluasi')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
@@ -313,9 +313,9 @@
     <h2>POEMS ABOUT YOU</h2>
     <div class="gallery">
       <img src="asset/foto5.jpeg" alt="Foto 5" onclick="openLightbox(this, 'nyoba nulis di binder')">
-      <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'Gua gak pernah naksir,atau sejenisnya')">
-      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'Emang untuk 2 puisi ini cocok buat Amel, tapi jangan salah paham')">
-      <img src="asset/foto88.jpeg" alt="Foto 8" onclick="openLightbox(this, 'Ini sebelum gua ke bandung, pas nulis keduanya cuman halu, tapi pas baca malah mikir diri elo,  bukan maksud apa-apa ya🙏🏾')">
+      <img src="asset/foto6.jpeg" alt="Foto 6" onclick="openLightbox(this, 'anggap keduanya sebagai pujian')">
+      <img src="asset/foto7.jpeg" alt="Foto 7" onclick="openLightbox(this, 'gk usah mikir hal lain')">
+      <img src="asset/foto88.jpeg" alt="Foto 8" onclick="openLightbox(this, 'one of my best poems')">
     </div>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="nextLayer()">Next ➡</button>
@@ -339,7 +339,7 @@
     </video>
     <div class="overlay"></div>
     <h2 class="glow-text">BACOTAN GK BERFAEDAH💫</h2>
-    <p id="random-quote">Klik tombol di bawah buat kata-kata hari ini</p>
+    <p id="random-quote">150+ kalimat random</p>
     <button onclick="prevLayer()">⬅ Back</button>
     <button onclick="randomQuote()">🎲 NYOCOT</button>
     <button onclick="nextLayer()">Next ➡</button>
