--- a/index.html
+++ b/index.html
@@ -345,6 +345,22 @@
     <button onclick="nextLayer()">Next ➡</button>
   </div>
 
+  <div id="layer8" class="layer">
+    <video autoplay muted loop class="bg-video">
+      <source src="asset/video5.mp4" type="video/mp4">
+    </video>
+    <div class="overlay"></div>
+    <h2>POEMS ABOUT YOU</h2>
+    <div class="gallery">
+      <img src="asset/terjun.jpeg" alt="Foto 5" onclick="openLightbox(this, 'nyoba nulis di binder')">
+      <img src="asset/drive.jpeg" alt="Foto 6" onclick="openLightbox(this, 'anggap keduanya sebagai pujian')">
+      <img src="asset/vidio.jpeg" alt="Foto 7" onclick="openLightbox(this, 'gk usah mikir hal lain')">
+      <img src="asset/planet.jpeg" alt="Foto 8" onclick="openLightbox(this, 'one of my best poems')">
+    </div>
+    <button onclick="prevLayer()">⬅ Back</button>
+    <button onclick="nextLayer()">Next ➡</button>
+  </div>
+
   <div id="layerQuestion" class="layer">
     <video autoplay muted loop class="bg-video">
       <source src="asset/bgquestion.mp4" type="video/mp4">
