--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
         <button id="noBtn">ENGGAK</button>
       </div>
       <button onclick="prevLayer()">⬅ Back</button>
+    <button onclick="nextLayer()">Last ➡</button>
     </div>
   </div>
 
